# pytest-plugins-custom-asserters

./: .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
pytest_asserters/asserters/: __init__.py  json_asserters.py
pytest_asserters/utils/: messages.py
tests/: conftest.py  test_asserters.py
tests/fixtures/: json_fixtures.py  simple_json_fixtures.py
