[tool.poetry]
name = "pytest-asserters"
version = "0.1.0"
description = "Pytest plugins for customised asserters"
authors = ["lbhtran"]
license = "MIT"
readme = "README.md"
packages = [{include = "pytest_asserters"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
jsondiff = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
